--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     width: 100%;
     height: 100vh; /*vh- screen height*/
-    background: url(img/images/intro.jpg) center no-repeat;
+    background: url(img/intro.jpg) center no-repeat;
     background-size: cover;
     
      
