--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,15 @@ body {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
+hr {
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+    
+    color: #bababa;
+    
+}
 
 /*container*/
 .container {
@@ -217,7 +226,7 @@ padding: 90px 0 100px 0;
 }
 
 .section-header {
-    margin: 0 auto 28px;
+    margin: 0 auto 50px;
     width: 100%;
     max-width: 950px;
     text-align: center;
@@ -329,5 +338,38 @@ color: #ffffff;
 .stat-text {
     font-size: 14px;
     text-transform: uppercase;
+
+}
+
+/*Services*/
+.services {
+    display: flex;
+}
+
+.services-item {
+    flex: 1 1 0;
+    padding-left: 85px;
+    padding-right: 35px;
+    position: relative;
+}
+.services-icon {
+    position: absolute;
+    top: 2px;
+    left: 26px;
+    z-index: 1;
+} 
+.services-title{
+    font-size: 14px;
+    
+    color: #333333;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+
+}
+.services-text{
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #999999;
+
 
 }
