--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,12 @@ h1, h2, h3, h4, h5, h6 {
 hr {
     display: block;
     width: 100%;
-    height: 1px;
+    height: 2px;
     margin: 40px 0;
+    border-color: white;
+    color: #999999;
+
     
-    color: #bababa;
     
 }
 
@@ -225,6 +227,13 @@ opacity: 0.7;
 padding: 90px 0 100px 0;
 }
 
+.section--devices {
+    background: url(img/design/design_background.jpg)
+        center no-repeat;
+        background-size: cover;
+        padding-bottom: 0;
+}
+
 .section-header {
     margin: 0 auto 50px;
     width: 100%;
@@ -370,6 +379,20 @@ color: #ffffff;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     color: #999999;
+}
 
+.devices {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    position: relative;
+}
+.devices-item {
+    
+}
+.devices--item--ipad {
+
+}
+.devices--item--iphone {
 
 }
