--- a/styles.css
+++ b/styles.css
@@ -272,41 +272,41 @@ padding: 90px 0 100px 0;
 }
 /*ABOUT*/
 
-.about {
+.card {
     display: flex;
     justify-content: space-between;
     margin-top: 62px;
 }
 
-.about-item {
+.card-item {
     width: 380px;
     background-color: #95e1d3;
     position: relative;
 
 }
 
-.about-item:hover .about-img {
+.card-item:hover .card-img {
     transform: translate3d(-10px, -10px, 0);
 }
 
-.about-item:hover .about-img img {
+.card-item:hover .card-img img {
 opacity: 0.15;
 }
-.about-item:hover .about-text {
+.card-item:hover .card-text {
     opacity: 1;
 }
 
-.about-img {
+.card-img {
     background: 
      linear-gradient(to bottom, 
      #ff9999, #fce38a);
     transition: transform .2s linear;
 }
-.about-img img {
+.card-img img {
     display: block;
     transition: opacity .3s linear;
 }
-.about-text {
+.card-text {
     width: 100%;
     color: #ffffff;
     text-transform: uppercase;
