--- a/styles.css
+++ b/styles.css
@@ -278,11 +278,13 @@ padding: 90px 0 100px 0;
     margin-top: 62px;
 }
 
-.card-item {
-    width: 380px;
+.card-inner {
     background-color: #95e1d3;
     position: relative;
+}
 
+.card-item {
+    width: 380px;
 }
 
 .card-item:hover .card-img {
@@ -322,6 +324,26 @@ transform: translate3d(0, -50%);
 transition: opacity .3s linear;
 }
 
+.card-info {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.card-name {
+    margin-bottom: 10px;
+font-size: 14px;
+color: #333333;
+text-transform: uppercase;
+}
+
+.card-prof {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #999999;
+    font-style: italic;
+    font-weight: 300;
+
+}
 /*Stattistics*/
 
 .statistics {
@@ -574,4 +596,41 @@ margin-bottom: 15px;
     transform: rotate(135deg) ;
   
    
+}
+
+/*Social*/
+
+.social {
+    display: flex;
+ justify-content: center;
+
+}
+
+.social-item {
+    background-color: #fce38a;
+    border-right: 1px solid #f38181;
+    text-decoration: none;
+    color: #f38181;
+     font-size: 30px;
+
+     height: 56px;
+     width: 56px;
+     padding: 15px;
+     line-height: 1;
+     transition: background .3s linear,
+     color .2s linear;
+
+}
+.social-item:hover {
+    background-color: #f38181;
+    color: #ffffff;
+}
+.social-item:last-child {
+    border: 0;
+}
+
+
+.logos {
+    display: flex;
+    justify-content: space-between;
 }
