--- a/styles.css
+++ b/styles.css
@@ -633,4 +633,63 @@ margin-bottom: 15px;
 .logos {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+/*Works*/
+.works {
+    display: flex;
+    
+}
+.works-col {
+    flex: 1 1 0;
+}
+
+.works-item {
+position: relative;
+background:
+linear-gradient(to bottom, 
+#ff9999, #fce38a);
+}
+.works-item:hover .works-image {
+    opacity: .1;
+
+}
+.works-item:hover .works-info {
+    opacity: 1;
+}
+
+
+.works-info {
+    width: 100%;
+    position: absolute;
+    opacity: 0;
+
+    text-align: center;
+    color: white;
+    top: 45%;
+    left: 0;
+    transition: opacity .3s linear;
+    
+}
+
+.works-title {
+    margin-bottom: 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+   
+
+}
+
+.works-text {
+    Font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-style: italic;
+   
+
+}
+
+.works_image {
+    display: block;
+    
+    transition: opacity .2s linear;
 }
