--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,11 @@ padding: 90px 0 100px 0;
         margin-bottom: 40px;
 }
 
+.section--clients {
+    background: url(img/clients/clients_bckgr.png) center no-repeat;
+    background-size: cover;
+    }
+
 .section-header {
     margin: 0 auto 50px;
     width: 100%;
@@ -534,9 +539,18 @@ color: #ffffff;
     z-index: 1;
     height: 150px;
     width: 150px;
-
-
 }
+
+.reviews-photo-II {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 170px;
+    width: 170px;
+}
+
+
 .reviews-text {
 font-family: 'Roboto', sans-serif;
 font-size: 24px;
@@ -695,4 +709,64 @@ linear-gradient(to bottom,
     display: block;
     
     transition: opacity .2s linear;
+}
+
+/*Clients*/
+
+
+.clients {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.clients-item {
+    width: 50%;
+    padding: 0 45px 0 180px;
+    position: relative;
+    margin-bottom: 70px;
+    padding-top: 13px;
+}
+.clients-photo {
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    top: 0;
+    left: 40px; 
+    z-index: 1;
+    position: absolute;
+
+}
+.clients-content{
+
+}
+.clients-name{
+    color: #333333;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+
+
+}
+.clients-prof{
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #333333;
+    font-style: italic;
+
+
+}
+.clients-text{
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #999999;
+
+}
+.clients-text:before {
+    content: "";
+    display: block;
+    margin: 17px 0 17px 0;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
 }
