--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,14 @@ padding: 90px 0 100px 0;
     background-size: cover;
     }
 
+    .section--map {
+        background: url(img/map/map_bckgr.png);
+        background-size: cover;
+        padding: 50px 0;
+    }
+
+
+
 .section-header {
     margin: 0 auto 50px;
     width: 100%;
@@ -776,18 +784,23 @@ linear-gradient(to bottom,
 
 .blog {
     display: flex;
+    justify-content: space-between;
 
 }
 
 .blog-item {
-    width: 30%;
+    width: 31%;
+    
 
 }
 
 .blog-header {
     position: relative;
+    margin-bottom: 16px;
+
 
 }
+
 
 .blog-photo {
     display: blog;
@@ -796,6 +809,7 @@ linear-gradient(to bottom,
 }
 
 .blog-date {
+    padding: 10px;
     width: 60px;
     height: 70px;
     background-color: #95e1d3;
@@ -803,14 +817,215 @@ linear-gradient(to bottom,
     bottom: 12px;
     left: -13px;
     z-index: 1;
-    
+    text-align: center;
+    color: #ffffff;
+    line-height: 1;
 
 
 }
 .blog-date-day {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1;
+    
 
 }
 
 .blog-date-month {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    font-style: italic;
+    
 
 }
+
+.blog-content {
+    margin-bottom: 10px;
+}
+
+.blog-title {
+    font-size: 14px;
+    color: #333333;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.blog-title a {
+    color: inherit;
+    text-decoration: none;
+
+}
+
+.blog-title:hover {
+    text-decoration: underline;
+}
+
+
+.blog-text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #999999;
+    margin-bottom: 15px;
+
+
+
+}
+.blog-footer {
+    padding-top: 14px;
+    border-top: 1px solid #e5e5e5;
+
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 300px;
+    color: #999999;
+    font-style: italic;
+
+
+}
+.blog-stat-item {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 10px;
+}
+
+
+.blog-stat-item i {
+    color: #95e1d3;
+    padding-right: 5px;
+}
+
+/* Map */
+
+.map {
+    text-align: center;
+
+}
+
+.map-title{
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #f38181;
+    text-decoration: 
+}
+
+.map-title a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.map-title:hover {
+    text-decoration: underline;
+}
+
+.map-title:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 15px auto;
+    background-color: #f38181;
+}
+
+
+    .footer {
+        padding-top: 65px;
+    }
+.footer-inner {
+    padding-bottom: 65px;
+}
+    .footer-logo {
+        margin-bottom: 30px;
+        font-size: 46px;
+        font-weight: bold;
+        color: #cccccc;
+
+    }
+
+    .footer-text {
+        margin-bottom: 30px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 15px;
+        color: #999999;
+    }
+
+    .footer-social {
+        margin-bottom: 25px;
+    }
+
+    .footer-social-header {
+        padding-bottom: 15px;
+        font-size: 14px;
+        color: #333333;
+        border-bottom: 2px solid #e5e5e5;
+    
+    }
+    .footer-social-header b {
+        font-size: 18px;
+
+    }
+    .footer-social-content {
+        padding-top: 15px;
+        font-family: 'Roboto', sans-serif;
+color: #999999;
+font-weight: 300;
+font-size: 15px;
+font-style: italic;
+
+
+    }
+
+    .footer-social-content i {
+        display: inline-block;
+        vertical-align: middle;
+        margin-left: 15px;
+        font-size: 17px;
+        color: #95e1d3;
+    }
+   .footer-social-content a {
+       text-decoration: none;
+   }
+
+
+   /*SUBSCRIBE*/
+
+   .subscribe {
+       width: 100%;
+       max-width: 380px;
+   }
+
+   .subscribe-input {
+       width: 60%;
+    padding: 12px;
+    height: 40px;
+
+       background: #ffffff;
+       border: 1px solid #e7e7e7;
+
+       font-family: 'Roboto', sans-serif;
+       font-size: 15px;
+        font-style: italic;
+        font-weight: 300;
+        color: #333333;
+        line-height: 1.1;
+   }
+   .subscribe-input::placeholder {
+    color: #cccccc;
+   }
+   .subscribe-button{
+       width: 40%;
+    height: 40px;
+    padding: 12px 30px;
+    border: 0;
+    cursor: pointer;
+    background: #95e1d3;
+    
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff;
+    text-transform: uppercase;
+    line-height: 1.1;
+
+   }
